# CircularBuffer

./: README.md
src/: circular_buf.c  circular_buf.h  fifo.c  fifo.h  simple_queue.c  simple_queue.h
test/: .gitignore  AllTests.cpp  CMakeLists.txt  Makefile  TEST_circular_buf.cpp  fifo_test.cpp  prepareCppUTest.sh
